--- a/app/assets/stylesheets/pages/_articles-show.scss
+++ b/app/assets/stylesheets/pages/_articles-show.scss
@@ -22,4 +22,15 @@
   .footer {
     display: none;
   }
+  h4 {
+    text-transform: uppercase;
+    font-size: 22px;
+    letter-spacing: 2px;
+  }
+  h5 {
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    color: black;
+  }
 }
