--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -22,8 +22,10 @@
       <i class="fa fa-user fa-2x "></i>
     </div>
   <% end %>
-  <div class="col-lg-6 text-center">
-    Consulter l'annuaire des journalistes <br>
-    <i class="fa fa-fax fa-2x "></i>
-  </div>
+  <%= link_to account_annuaire_path do %>
+    <div class="col-lg-6 text-center">
+      Consulter l'annuaire des journalistes <br>
+      <i class="fa fa-fax fa-2x "></i>
+    </div>
+  <% end %>
 </div>
