--- a/app/assets/stylesheets/pages/_general.scss
+++ b/app/assets/stylesheets/pages/_general.scss
@@ -1,25 +1,13 @@
 @media screen and (max-device-width: 768px) and (orientation: portrait) {
-  .ancre {
-    display: none;
-  }
-  .menu {
-    display: none;
-  }
-  .menu_link {
-    display: none;
-  }
-}
-@media screen and (max-device-width: 768px) {
-  // Taille des polices
-
   h1 {
-    font-size: 37px;
-    letter-spacing: 1px;
-    margin-top: 80px
+    font-size: 40px;
   }
   h2 {
     font-size: 21px;
     letter-spacing: 1px;
+  }
+  h3 {
+    font-size: 18px !important;
   }
   h4 {
     font-size: 16px;
@@ -31,24 +19,42 @@
   p {
     font-size: 12px;
   }
+}
+@media screen and (max-width: 768px) {
+  // Taille des polices
 
-  .ancre {
-    display: none;
+  h1 {
+    font-size: 40px;
   }
-  .menu_link {
-    display: none;
+  h2 {
+    font-size: 21px;
+    letter-spacing: 1px;
+  }
+  h3 {
+    font-size: 18px !important;
+  }
+  h4 {
+    font-size: 16px;
+  }
+  h5 {
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+  p {
+    font-size: 12px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 999px) {
   // Taille des polices
   h1 {
-    font-size: 83px ;
-    letter-spacing: 1px;
-    margin-top: 71px
+    font-size: 50px ;
   }
   h2 {
     font-size: 30px;
     letter-spacing: 1px;
+  }
+  h3 {
+    font-size: 22px;
   }
   h4 {
     font-size: 24px;
@@ -58,19 +64,13 @@
     letter-spacing: 1px;
   }
   p {
-    font-size: 17px;
-  }
-
-  .menu_link {
-    display: none;
+    font-size: 14px;
   }
 }
 @media screen and (min-width: 1000px) and (max-width: 1349px) {
   // Taille des polices
   h1 {
-    font-size: 66px;
-    letter-spacing: 2px;
-    padding-top: 89px
+    font-size: 60px;
   }
   h2 {
     font-size: 38px;
@@ -79,6 +79,7 @@
   h3 {
     font-size: 29px;
   }
+
   h4 {
     font-size: 29px;
   }
@@ -89,16 +90,11 @@
   p {
     font-size: 16px;
   }
-  .menu_link {
-    display: none;
-  }
 }
 @media screen and (min-width: 1350px) {
   // Taille des polices
   h1 {
-    font-size: 90px;
-    letter-spacing: 2px;
-    padding-top: 120px
+    font-size: 70px;
   }
   h4 {
     font-size: 29px;
@@ -107,6 +103,10 @@
     font-size: 53px;
     letter-spacing: 1px;
   }
+  h3 {
+    font-size: 30px;
+  }
+
   h4 {
     font-size: 36px;
   }
@@ -114,10 +114,6 @@
     font-size: 24px;
     letter-spacing: 1px;
   }
-  .menu_link {
-    display: none;
-  }
-
   p {
     font-size: 19px;
   }
