--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,13 +17,13 @@
 
           <% if params[:themes] == "politique" %>
             <li class="navbar_link activ">
-              <%= link_to 'http://localhost:3000/politique', {:class => "active"} do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/politique', {:class => "active"} do %>
                  Politique
               <% end %>
             </li>
           <% else %>
             <li class="navbar_link ">
-              <%= link_to 'http://localhost:3000/politique' do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/politique' do %>
                  Politique
               <% end %>
             </li>
@@ -33,13 +33,13 @@
 
           <% if params[:themes] == "economie" %>
             <li class="navbar_link activ">
-              <%= link_to 'http://localhost:3000/economie', {:class => "active"} do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/economie', {:class => "active"} do %>
                  Economie
               <% end %>
             </li>
           <% else %>
             <li class="navbar_link ">
-              <%= link_to 'http://localhost:3000/economie' do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/economie' do %>
                  Economie
               <% end %>
             </li>
@@ -48,13 +48,13 @@
 
           <% if params[:themes] == "international" %>
             <li class="navbar_link activ">
-              <%= link_to 'http://localhost:3000/international', {:class => "active"} do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/international', {:class => "active"} do %>
                  International
               <% end %>
             </li>
           <% else %>
             <li class="navbar_link ">
-              <%= link_to 'http://localhost:3000/international' do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/international' do %>
                  International
               <% end %>
             </li>
@@ -62,13 +62,13 @@
 
            <% if params[:themes] == "droit" %>
             <li class="navbar_link activ ">
-              <%= link_to 'http://localhost:3000/droit', {:class => "active"} do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/droit', {:class => "active"} do %>
                  Droit
               <% end %>
             </li>
           <% else %>
             <li class="navbar_link ">
-              <%= link_to 'http://localhost:3000/droit' do %>
+              <%= link_to 'http://journal-yann-production.herokuapp.com/droit' do %>
                  Droit
               <% end %>
             </li>
